--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/sbt.xml
+.idea/scala_compiler.xml
 *.iws
 *.iml
 *.ipr
